fix details page on mobile being cut off

--- a/app/details/[id]/page.module.css
+++ b/app/details/[id]/page.module.css
@@ -29,6 +29,7 @@
 .pageContentContainer {
   display: flex;
   flex-direction: row;
+  width: 100%;
 
   @media (max-width: 768px) {
     flex-direction: column;
